
2008-03-10  Lynn Garren

	* src/GenEvent.cc: The GenVertex pointer to the parent event was 
	  not properly moved when the operator= method was used to copy
	  a GenEvent.  That bug is now fixed.
	* test/testMultipleCopies.cc.in: Add explicit test for the reported bug.

  --------------------------  HepMC-2.03.05  --------------------------

2008-02-22  Lynn Garren

	* fio/IO_HEPEVT.cc:  According to standard HepMC design, all vertices 
	in an event are expected to contain particles.  If, for instance, the
	first two particles have no parents, then they should simply not have 
	a production vertex.  However, in at least one instance empty production
	vertices were created for the first two particles. IO_HEPEVT now
	protects against this.


2008-02-18  Lynn Garren

	* HepMC/HEPEVT_Wrapper.h: fix calculation of the total size 
	of the common block

  --------------------------  HepMC-2.03.04  --------------------------

2008-02-05  Lynn Garren

	* test: use /bin/bash instead of /bin/sh in shell scripts
	
	* GenEvent, GenVertex, GenParticle: remove static counters
	These counters were only for the debugging convenience of the 
	HepMC code developer.  They were not accessible by users.

2008-02-04  Lynn Garren

	* fio/IO_HERWIG.cc: fix for Z0 mother-daughter problem (from Atlas)
	
	* HepMC/SimpleVector.h: Remove simple math methods

2007-01-29  Lynn Garren

	* examples/testHerwigCopies.cc: compare copies of Herwig events

	* examples/testPythiaCopies.cc: compare copies of Pythia events

2007-01-15  Lynn Garren

	* TempParticleMap.h: use barcode instead of counter for ordering
	to solve a problem with changed order of particles when making copies

2007-01-14  Lynn Garren

	* HepMC/CompareGenEvent.h: new utility to compare two
	copies of a GenEvent object

	* test/testMultipleCopies.cc.in: verify that two copies of
	the same GenEvent object are, indeed, the same
	
	* test/testHepMCIteration: use a different output file name so the 